--- a/dev/ember-project/app/components/modal-profile.hbs
+++ b/dev/ember-project/app/components/modal-profile.hbs
@@ -35,6 +35,24 @@
       >
       <small>This is the visible Name on this Site</small>
     </div>
+
+    <div class="form-group mt-3" >
+      <label>E-Mail:</label>
+      <input 
+        type="name" 
+        class="form-control"
+        style="background-color: #706363;"
+        value={{this.newEmail}}
+        {{on "input" this.updateNewEmail}}
+      >
+      <input type="checkbox" 
+       aria-label="Checkbox for following text input" 
+       checked={{this.twofa_enabled}} 
+       {{on "change" this.toggle2fa}}>
+      <small>Enable Email for 2-FA</small>  
+    </div>
+
+
   </modal.body>
   <modal.footer style="background-color: #706363;">
     <label class="ERROR">{{this.error}}</label>
