--- a/dev/ember-project/app/components/profile-other.hbs
+++ b/dev/ember-project/app/components/profile-other.hbs
@@ -2,14 +2,14 @@
   {{!-- Profile picture column (1 part) --}}
   <div class="col center no-padding position-relative">
     <button type="button" class="btn-close top-left" onclick={{this.onCloseClick}}></button>
-    <img src="https://localhost/users/users{{@selectedUser.avatar}}/" alt="Profile Picture" class="profile-pic" />
+    <img src="https://localhost/users/users{{this.user.selectedUser.avatar}}/" alt="Profile Picture" class="profile-pic" />
   </div>
 
   {{!-- Profile details column (3 parts) --}}
   <div class="col-10">
     {{!-- First row of profile details --}}
     <div class="profile-details">
-      <h2 class="name">{{@selectedUser.nickname}}</h2>
+      <h2 class="name">{{this.user.selectedUser.nickname}}</h2>
       <div class="actions">
         <button class="emoji-button info" data-bs-toggle="tooltip" data-bs-placement="top" title="Live Chat"
           type="button" {{on "click" this.startLiveChat}}>
@@ -42,13 +42,13 @@
         </button>
         {{/if}}
       </div>
-      <h2 class="points">{{@selectedUser.trophies}}🏆</h2>
+      <h2 class="points">{{this.user.selectedUser.trophies}}🏆</h2>
     </div>
 
     {{!-- Second row of profile details --}}
     <div class="profile-details">
-      <ModalGameHistory @user={{@selectedUser}}/>
-      <h2 class="info">Wins: {{@selectedUser.wins}}</h2>
+      <ModalGameHistory @user={{this.user.selectedUser}}/>
+      <h2 class="info">Wins: {{this.user.selectedUser.wins}}</h2>
     </div>
 
     <div class="profile-details">
@@ -57,7 +57,7 @@
       {{else}}
       <h2 class="info">🔴 offline</h2>
       {{/if}}
-      <h2 class="info">Losses: {{@selectedUser.losses}}</h2>
+      <h2 class="info">Losses: {{this.user.selectedUser.losses}}</h2>
     </div>
 
   </div>
