--- a/dev/ember-project/app/templates/login.hbs
+++ b/dev/ember-project/app/templates/login.hbs
@@ -1,6 +1,13 @@
 <div class="overlay">
   <div class="overlay-content">
     <form {{on "submit" this.login}}>
+      {{#if this.session.twofa}}
+        <div class="login-field">
+        <label>2FA-Code:</label>
+        <input type="text" name="twofa" {{on "change" (fn this.update "twofaCode")}} />
+        <button type="button" class="nav-button" {{on "click" this.submitTwofa}}>Authenticate</button>
+      </div>
+      {{else}}
       <div class="login-field">
         <label>Username:</label>
         <input type="text" name="username" {{on "change" (fn this.update "username")}} />
@@ -13,6 +20,7 @@
       
       <button class="login" type="submit">Login</button>
       <button type="button" class="register-button" {{on "click" this.register}}>Register</button>
+      {{/if}}
     </form>
 
     {{#if this.error}}
