--- a/dev/ember-project/app/components/modal-game-history.hbs
+++ b/dev/ember-project/app/components/modal-game-history.hbs
@@ -1,11 +1,8 @@
 <button class="btn btn-success p-1 mb-1" type="button" {{on "click" this.openModal}}>
-          Games: {{@user.games_total}}
+  Games: {{@user.games_total}}
 </button>
 
-<BsModal
-  @open={{this.isModalOpen}}
-  as |modal|
->
+<BsModal @open={{this.isModalOpen}} as |modal|>
   <modal.header style="background-color: #706363;">
     <h4 class="score history center">
       Match History
@@ -14,16 +11,16 @@
 
   <modal.body style="background-color: #706363;">
     <div class="container-fluid row" style="height: 50vh; overflow-y: auto; margin: 0; padding: 0;">
-        <div class="scrollable-list history-scroll">
-    
-          {{#each this.games as |game|}}
-            <HistoryItem @game={{game}} />
-          {{/each}}
+      <div class="scrollable-list history-scroll">
 
-        </div>
+        {{#each this.games as |game|}}
+        <HistoryItem @game={{game}} />
+        {{/each}}
+
+      </div>
     </div>
-    
-    
+
+
   </modal.body>
 
 </BsModal>
