--- a/dev/ember-project/app/components/user.hbs
+++ b/dev/ember-project/app/components/user.hbs
@@ -1,6 +1,6 @@
 {{#if @user}}
 <div class="user-card" role="button" onclick={{this.select}}>
-    <img src="https://localhost/users/users{{@user.avatar}}/" alt="Profile Picture" class="user-pic user" />
+    <img src="https://{{this.hostname}}{{@user.avatar}}/" alt="Profile Picture" class="user-pic user" />
     <div class="profile-details">
         {{#if this.isOnline}}
         <h2 class="info">{{@user.nickname}} 🟢</h2>
